# safety-trust-engine

./: .env.example  .gitignore  README.md  README_es.md  pyproject.toml
.claude/: settings.json
.github/scripts/: protect-main.ps1
.github/workflows/: safety-trust.yml
docs/: HANDOVER.md  REGULATORY_RESEARCH.md  Safety_and_Trust_Engine.pptx  guide_en.md  guide_es.md  slide15_live_segment_technical.md  slide15_live_segment_technical_es.md
examples/: garak.baseline.report.jsonl
garak/: Dockerfile  azure.py
src/safety_engine/: __init__.py  compliance.py  dataset.py  providers.py  pyrit_campaign.py  report.py  run.py  stages.py
tests/: test_demo_gate.py  test_parsers.py  test_providers.py
