[project]
name = "safety-trust-engine"
version = "0.1.0"
description = "Automated red-team compliance gate: maps garak/AgentDojo/PyRIT findings to EU AI Act, DORA, and FCA controls and emits an auditable evidence artifact."
readme = "README.md"
requires-python = ">=3.11"
# Core is standard-library only -- the offline `--demo` path and the whole
# compliance/gate/artifact core need no third-party packages. Live stages pull
# their tools from the `live` extra; garak runs as a Docker sidecar (no pip dep).
dependencies = []

[project.optional-dependencies]
# Live red-team stages. garak is intentionally absent -- it pins openai<1.0.0 and
# is run as an isolated Docker sidecar (see garak/Dockerfile), its report ingested
# via `--garak-report`.
live = [
    "pyrit>=0.13.0",
    "inspect-ai>=0.3.239",
    # [agentdojo] pulls the AgentDojo tool-environment deps (pydantic[email],
    # deepdiff) that its Inbox/Workspace suites need at task-load time.
    "inspect-evals[agentdojo]>=0.13.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
safety-engine = "safety_engine.run:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "safety_engine"

[tool.uv]
link-mode = "copy"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
